# CubbyDNN

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  CubbyDNN.cbp  Dockerfile  Instructions.md  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  code_structure.md
CMake/: CompileOptions.cmake
Declarations/Takion/Computations/: ArgumentChecker.hpp  Computations.hpp  Device.hpp
Declarations/Takion/Engine/: Model.hpp  ModelDecl.hpp  UnitManager.hpp  UnitManagerDecl.hpp
Declarations/Takion/FrontEnd/: AbsTensorDecl.hpp  ModelDecl.hpp  UnitMetadataDecl.hpp
Declarations/Takion/Tensors/: Tensor.hpp  TensorDecl.hpp  TensorInfo.hpp
Declarations/Takion/Units/: ComputableUnit.hpp  ComputableUnitDecl.hpp  TrainableUnit.hpp  TrainableUnitDecl.hpp  UnitInitializer.hpp  UnitMetadata.hpp  UnitMetadataDecl.hpp  UnitType.hpp
Declarations/Takion/Utils/: Declarations.hpp  Parameter.hpp  Shape.hpp  SharedPtr-Decl.hpp  SharedPtr.hpp  Span.hpp  SpinLock-Decl.hpp  SpinLock.hpp  SpinLockQueue-Decl.hpp  SpinLockQueue.hpp  TensorData.hpp  WeakPtr-Decl.hpp  WeakPtr.hpp
Examples/GraphBasic/: CMakeLists.txt  main.cpp
Implementations/Takion/Engine/: ModelImpl.hpp  UnitManager.hpp  UnitManagerImpl.hpp
Implementations/Takion/FrontEnd/: Model.hpp  UnitMetaData.hpp
Implementations/Takion/Tensors/: Tensor.hpp  TensorImpl.hpp
Implementations/Takion/Units/: ComputableUnit.hpp  ComputableUnitImpl.hpp  TrainableUnit.hpp  UnitMetaData.hpp  UnitMetaDataImpl.hpp
Includes/Backend/: backend.h
Includes/Backend/storage/: Storage.h  exceptions.h  storage.h
Includes/CubbyDNN/: Test.hpp
Includes/CubbyDNN/Compute/: FloatGemm.hpp  GEMM.hpp  IntegerGemm.hpp
Includes/CubbyDNN/Core/: Graph-Impl.hpp  Graph.hpp  GraphBuilder.hpp  Memory-Impl.hpp  Memory.hpp  Shape.hpp  Span-Impl.hpp  Span.hpp
Includes/CubbyDNN/Datas/: DataLoader.hpp  Dataset.hpp  Image.hpp  SimpleData.hpp  Tensor.hpp  TransformedDataset.hpp
Includes/CubbyDNN/Initializer/: Constant.hpp  Initializer.hpp  InitializerWrapper.hpp  Xavier.hpp
Includes/CubbyDNN/Node/: Dense.hpp  Input.hpp  Node.hpp  NodeInput.hpp  NodeType.hpp  NodeTypeManager-Impl.hpp  NodeTypeManager.hpp  NodeWrapper.hpp  Parameter.hpp  ReLU.hpp  Softmax.hpp  SoftmaxCE.hpp
Includes/CubbyDNN/Optimizer/: Momentum.hpp
Includes/CubbyDNN/Preprocess/: ImageTransforms.hpp  Transforms.hpp
Includes/CubbyDNN/Utils/: Downloader.hpp
Includes/cubbydnn/: Test.h  code_structure.md
Includes/cubbydnn/Computations/: ComputableUnit.hpp  Device.hpp  Logistic.hpp  LogisticUnum.hpp  Sigmoid.hpp
Includes/cubbydnn/Engine/: Engine.hpp  Model.hpp  SpinLock-Decl.hpp  SpinLock.hpp  SpinLockQueue-Decl.hpp  SpinLockQueue.hpp  TaskWrapper.hpp  ThreadManager.hpp  UnitManager.hpp
Includes/cubbydnn/Frontend/: Model.hpp
Includes/cubbydnn/Operations/: BasicOperations.hpp  MatrixOperations.hpp  Operation.hpp  OperationInfo.hpp
Includes/cubbydnn/Tensor/: Tensor.hpp  TensorData.hpp  TensorInfo.hpp  TensorObject.hpp  TensorShape.hpp
Includes/cubbydnn/Tensors/: Tensor.hpp  TensorData-Impl.hpp  TensorData.hpp  TensorInfo.hpp  TensorObject-Impl.hpp  TensorObject.hpp  TensorPlug.hpp  TensorShape.hpp  TensorSocket.hpp
Scripts/: Dockerfile.bionic  azure_pipelines_build_linux.yml  azure_pipelines_build_macos.yml  azure_pipelines_build_windows.yml  travis_build.sh  travis_build_docker.sh
Sources/CubbyDNN/: CMakeLists.txt  Test.cpp
Sources/Takion/: CMakeLists.txt
Sources/Takion/Computations/: Device.cpp
Sources/Takion/Computations/Activations/: ActivationWrapper.cpp
Sources/Takion/Computations/GEMM/: FloatGemm.cpp  IntegerGemm.cpp
Sources/Takion/Tensors/: TensorInfo.cpp
Sources/Takion/Units/: ComputableUnit.cpp  TrainableUnit.cpp  UnitType.cpp
Sources/Takion/Units/HiddenComputableUnits/: ActivationUnit.cpp  Dense.cpp
Sources/Takion/Units/SinkComputableUnits/: LossUnit.cpp  SinkUnit.cpp
Sources/Takion/Units/SourceComputableUnits/: ConstantUnit.cpp  SourceUnit.cpp
Sources/Takion/Utils/: Parameter.cpp  Shape.cpp
Sources/Utils/: Recorder.cpp  Shape.cpp
Sources/cubbydnn/: CMakeLists.txt  Test.cpp
Sources/cubbydnn/Backend/: backend.cpp
Sources/cubbydnn/Backend/storage/: Storage.cpp  backend.cpp  baseOp.cpp  management.cpp  storage.cpp
Sources/cubbydnn/Backend/util/: Tensor_container.cpp  Tensor_object.cpp  baseOp.cpp  management.cpp  shape.cpp  shape_checker.cpp  storage.cpp
Sources/cubbydnn/Computations/: ComputableUnit.cpp  Device.cpp
Sources/cubbydnn/Computations/Activations/: ActivationWrapper.cpp
Sources/cubbydnn/Computations/Functions/: Functions.cpp  Matrix.cpp
Sources/cubbydnn/Computations/Initializers/: Initializer.cpp
Sources/cubbydnn/Computations/LossFunctions/: LossFunctionWrapper.cpp
Sources/cubbydnn/Computations/TensorOperations/: BlazeOperations.cpp  Computations.cpp  NaiveOperations.cpp
Sources/cubbydnn/Datas/: Image.cpp
Sources/cubbydnn/Deprecated/Utils/: DoubleBuffer.cpp  Sync.cpp
Sources/cubbydnn/Engine/: Engine.cpp  Graph.cpp  Model.cpp  ThreadManager.cpp  UnitManager.cpp
Sources/cubbydnn/Frontend/: Model.cpp
Sources/cubbydnn/Node/: NodeType.cpp
Sources/cubbydnn/Operations/: Operation.cpp
Sources/cubbydnn/Tensor/: Tensor.cpp  TensorData.cpp  TensorInfo.cpp  TensorObject.cpp  TensorShape.cpp
Sources/cubbydnn/Tensors/: Tensor.cpp  TensorData.cpp  TensorInfo.cpp  TensorObject.cpp  TensorShape.cpp
Sources/cubbydnn/Units/: BaseUnits.cpp  ComputableUnit.cpp  CopyUnit.cpp  HiddenUnit.cpp  SinkUnit.cpp  SourceUnit.cpp  TrainableUnit.cpp  UnitMetadata.cpp  UnitType.cpp  typeName.cpp
Sources/cubbydnn/Units/HiddenComputableUnits/: Activation.cpp  ActivationUnit.cpp  Dense.cpp  HiddenUnit.cpp  LossUnit.cpp
Sources/cubbydnn/Units/SinkComputableUnits/: LossUnit.cpp  SinkUnit.cpp
Sources/cubbydnn/Units/SourceComputableUnits/: ConstantUnit.cpp  SourceUnit.cpp
Sources/cubbydnn/Utils/: Shape.cpp
Sources/cubbydnn/backend/management/: process_management.cpp
Sources/cubbydnn/backend/util/: shape.cpp  terminal.cpp
Tests/UnitTests/: CMakeLists.txt  SimpleTest.cpp  SimpleTest.hpp  UnitTests.cpp  main.cpp
(+263 files in other folders)
